smy2kkl2/smy2kkl/smy2kkl/GpMessages/662346588153800
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: יום שלישי 21 ינואר 2025 16:22:37</msg><msg code="-2147467259" type="100">﻿  File "C:\MDGISS\devs\smy2kkl2\Scripts\‏‏smy2kkl_param.py", line 120
    arcpy.AddMessage(f' AFTER:\n {tab_df.columns}'))
                                                   ^
﻿SyntaxError: unmatched ')'
</msg><msg code="0" type="0">Failed script 2. Convert To KKL Standard...</msg><msg code="-2147467259" type="100">Failed to execute (ConvertToKKLStandard).</msg><msg code="0" type="3">Failed at יום שלישי 21 ינואר 2025 16:22:37 (Elapsed Time: 0.22 seconds)</msg></messages>